--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@ layout: none
 	
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-	<link rel="stylesheet" href="css/style.css?v=2">
+	<link rel="stylesheet" href="stylesheets/compiled/style.css?v=2">
 
 	<script src="js/libs/modernizr-1.7.min.js"></script>
 </head>
 <body>
-	<div id="container">
-		<header>
+  
+	<div id="container" class="container_12">
+		<header class="grid_12">
       <h1>Topguest blog</h1>
       <a href="http://topguest.com">Visit topguest.com</a>
 		</header>
 
-		<div id="main" role="main">
+		<div id="main" role="main" class="grid_12">
       {% for post in site.posts %}
         <section>
           <div class="meta-data">
@@ -39,11 +40,13 @@ layout: none
         </section>
       {% endfor %}
 		</div>
-
+	</div>
+	<div id="container" class="container_12">
 		<footer>
 
 		</footer>
 	</div>
+
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 	<script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.5.1.min.js"%3E%3C/script%3E'))</script>
