calling it a day

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: none
 </head>
 <body>
   
-	<div id="container" class="container_12">
+	<div class="container_12">
 		<header class="grid_12">
       <h1><a href="/">Topguest blog</a></h1>
       <a id="topguest" href="http://topguest.com">Visit topguest.com</a>
@@ -48,11 +48,25 @@ layout: none
       {% endfor %}
 		</div>
 	</div>
-	<div id="container" class="container_12">
-		<footer>
-
-		</footer>
+	<div id="media">
+	  <div class="container_12">
+  		<div class="grid_12">
+  		  <div class="grid_4 alpha">
+  		    <h2>Press</h2>
+  		  </div>
+  		  <div class="grid_8 omega">
+  		    <h2>Press</h2>
+  		  </div>
+  		</div>
+  	</div>
 	</div>
+	<footer>
+    <div class="container_12">
+  		<div class="grid_12">
+  		  <p>Fine print</p>
+  		</div>
+  	</div>
+	</footer>
 
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
