--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ layout: none
 	
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+	<link rel="stylesheet" href="js/libs/fancybox/jquery.fancybox-1.3.4.css">
 	<link rel="stylesheet" href="stylesheets/compiled/style.css?v=2">
   
   <script type="text/javascript" src="http://use.typekit.com/ril2nrf.js"></script>
@@ -75,14 +76,14 @@ layout: none
   		    </ul>
   		  </div>
   		  <div class="grid_8 omega" id="images">
-  		    <a class="image-link" href="#"><img src="/images/media01.jpg" /></a>
-  		    <a class="image-link" href="#"><img src="/images/media01.jpg" /></a>
-  		    <a class="image-link" href="#"><img src="/images/media01.jpg" /></a>
-  		    <a class="image-link omega" href="#"><img src="/images/media01.jpg"/></a>
-  		    <a class="image-link" href="#"><img src="/images/media01.jpg" /></a>
-  		    <a class="image-link" href="#"><img src="/images/media01.jpg" /></a>
-  		    <a class="image-link" href="#"><img src="/images/media01.jpg" /></a>
-  		    <a class="image-link omega" href="#"><img src="/images/media01.jpg"  class="omega"/></a>    
+  		    <a rel="example_group"  class="image-link" href="./images/media01-b.jpg"  title="print caption!!! caption"><img src="/images/media01.jpg" / alt=""></a>
+  		    <a rel="example_group"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
+  		    <a rel="example_group"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
+  		    <a rel="example_group"  class="image-link omega" href="./images/media01.jpg"><img src="/images/media01.jpg"/></a>
+  		    <a rel="example_group"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
+  		    <a rel="example_group"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
+  		    <a rel="example_group"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
+  		    <a rel="example_group"  class="image-link omega" href="./images/media01.jpg"><img src="/images/media01.jpg"  class="omega"/></a>    
   		  </div>
   		</div>
   	</div>
@@ -111,6 +112,7 @@ layout: none
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 	<script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.5.1.min.js"%3E%3C/script%3E'))</script>
+	<script src="js/libs/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 	<script src="js/plugins.js"></script>
 	<script src="js/script.js"></script>
 	<script>
