--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@ layout: none
   		    </ul>
   		  </div>
   		  <div class="grid_8 omega" id="images">
-  		    <a rel="example_group"  class="image-link" href="./images/media01-b.jpg"  title="print caption!!! caption"><img src="/images/media01.jpg" / alt=""></a>
-  		    <a rel="example_group"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
-  		    <a rel="example_group"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
-  		    <a rel="example_group"  class="image-link omega" href="./images/media01.jpg"><img src="/images/media01.jpg"/></a>
-  		    <a rel="example_group"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
-  		    <a rel="example_group"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
-  		    <a rel="example_group"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
-  		    <a rel="example_group"  class="image-link omega" href="./images/media01.jpg"><img src="/images/media01.jpg"  class="omega"/></a>    
+  		    <a rel="image-gallery"  class="image-link" href="./images/media01-b.jpg" title="Poolside at Topguest's Launch Party &ndash; Standard Hotel NY"><img src="/images/media01.jpg" / alt=""></a>
+  		    <a rel="image-gallery"  class="image-link" href="./images/media02-b.jpg" title="Co-founder's Ash and Geoff at Topguest's Launch Party &ndash; Standard Hotel NY"><img src="/images/media02.jpg" /></a>
+  		    <a rel="image-gallery"  class="image-link" href="./images/media03-b.jpg" title="Instagram and Virgin America"><img src="/images/media03.jpg" /></a>
+  		    <a rel="image-gallery"  class="image-link omega" href="./images/media01.jpg"><img src="/images/media01.jpg"/></a>
+  		    <a rel="image-gallery"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
+  		    <a rel="image-gallery"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
+  		    <a rel="image-gallery"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
+  		    <a rel="image-gallery"  class="image-link omega" href="./images/media01.jpg"><img src="/images/media01.jpg"  class="omega"/></a>    
   		  </div>
   		</div>
   	</div>
