--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@ layout: none
   		  <div class="grid_8 omega" id="images">
   		    <a rel="image-gallery"  class="image-link" href="./images/media01-b.jpg" title="Poolside at Topguest's Launch Party &ndash; Standard Hotel NY"><img src="/images/media01.jpg" / alt=""></a>
   		    <a rel="image-gallery"  class="image-link" href="./images/media02-b.jpg" title="Co-founder's Ash and Geoff at Topguest's Launch Party &ndash; Standard Hotel NY"><img src="/images/media02.jpg" /></a>
-  		    <a rel="image-gallery"  class="image-link" href="./images/media03-b.jpg" title="Instagram and Virgin America"><img src="/images/media03.jpg" /></a>
-  		    <a rel="image-gallery"  class="image-link omega" href="./images/media01.jpg"><img src="/images/media01.jpg"/></a>
-  		    <a rel="image-gallery"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
-  		    <a rel="image-gallery"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
-  		    <a rel="image-gallery"  class="image-link" href="./images/media01.jpg"><img src="/images/media01.jpg" /></a>
-  		    <a rel="image-gallery"  class="image-link omega" href="./images/media01.jpg"><img src="/images/media01.jpg"  class="omega"/></a>    
+  		    <a rel="image-gallery"  class="image-link" href="./images/media03-b.jpg" title="Virgin America and Instagram"><img src="/images/media03.jpg" /></a>
+  		    <a rel="image-gallery"  class="image-link omega" href="./images/media04-b.jpg" title="One of our newest Topguest locations: Caesars Palace"><img src="/images/media04.jpg"/></a>
+  		    <a rel="image-gallery"  class="image-link" href="./images/media05-b.jpg" title="Virgin America and Instagram"><img src="/images/media05.jpg" /></a>
+  		    <a rel="image-gallery"  class="image-link" href="./images/media06-b.jpg" title="Topguest CEO Geoff Lewis at PluggedIn Ventures MobileEco Summit"><img src="/images/media06.jpg" /></a>
+  		    <a rel="image-gallery"  class="image-link" href="./images/media07-b.jpg" title="Topguest's Launch Party &ndash; Standard Hotel NY"><img src="/images/media07.jpg" /></a>
+  		    <a rel="image-gallery"  class="image-link omega" href="./images/media08-b.jpg" title="Viceroy Anguilla. One of over 10,000 locations you can earn points with Topguest."><img src="/images/media08.jpg"  class="omega"/></a>    
   		  </div>
   		</div>
   	</div>
