added Colloquy article to press list

--- a/press.html
+++ b/press.html
@@ -10,6 +10,10 @@ title: Press history
     <a href="http://www.vegaschatter.com/tag/TopGuest">Caesars Entertainment Will Reward You For Checking In</a>
   </li>
   <li>
+    <p class="source"><strong>Colloquy</strong> – 21 April 2011</p>
+    <a href="http://www.colloquy.com/breaking_view.asp?xd=8092">Topguest and Caesars partner for social media check-ins and loyalty points</a>
+  </li>
+  <li>
     <p class="source"><strong>Pulse of Vegas</strong> – 21 April 2011</p>
     <a href="http://lasvegasblog.harrahs.com/total-rewards/topguest-rewards-vegas-visitors-for-social-check-ins/">Topguest Rewards Vegas Visitors for Social Check-Ins</a>
   </li>
